logs/databrowse.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/databrowse'...
Listing './lib/python3.5/site-packages/databrowse/lib'...
Compiling './lib/python3.5/site-packages/databrowse/lib/db_lib.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (db_lib.py, line 180)
Listing './lib/python3.5/site-packages/databrowse/plugins'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_PDF_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_SolidWorks_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_checklist_editor'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_checklist_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_data_table'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_datacollect_v1_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_datacollect_v2_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_dataguzzler_data_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_dataguzzler_settings_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_default'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_directory'...
Compiling './lib/python3.5/site-packages/databrowse/plugins/db_directory/db_directory.py'...
***   File "./lib/python3.5/site-packages/databrowse/plugins/db_directory/db_directory.py", line 109
    exec "import databrowse.plugins.%s.%s as %s_module" % (handler, handler, handler)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/databrowse/plugins/db_file_ops'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_generic_HDF5_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_generic_WSGI_application'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_generic_XML_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_generic_binary_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_image_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_limatix_qautils_editor'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_limatix_qautils_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_limatix_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_mercurial_repository'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_monthly_report_tool'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_monthly_report_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_movie_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_multimedia_directory'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_office_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_plain_text_file'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_specimen'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_specimen_database'...
Compiling './lib/python3.5/site-packages/databrowse/plugins/db_specimen_database/db_specimen_database.py'...
***   File "./lib/python3.5/site-packages/databrowse/plugins/db_specimen_database/db_specimen_database.py", line 85
    exec "returnlist.sort(%s%s)" % ("reverse=True" if order == "desc" else "reverse=False", ",key=%s" % sort if sort is not None else ",key=str.lower")
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/databrowse/plugins/db_specimen_group'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_svg_viewer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_transducer'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_transducer_database'...
Compiling './lib/python3.5/site-packages/databrowse/plugins/db_transducer_database/db_transducer_database.py'...
***   File "./lib/python3.5/site-packages/databrowse/plugins/db_transducer_database/db_transducer_database.py", line 84
    exec "returnlist.sort(%s%s)" % ("reverse=True" if order == "desc" else "reverse=False", ",key=%s" % sort if sort is not None else ",key=str.lower")
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/databrowse/plugins/db_triggerlog'...
Listing './lib/python3.5/site-packages/databrowse/plugins/db_triggerlog_database'...
Compiling './lib/python3.5/site-packages/databrowse/plugins/db_triggerlog_database/db_triggerlog_database.py'...
***   File "./lib/python3.5/site-packages/databrowse/plugins/db_triggerlog_database/db_triggerlog_database.py", line 72
    exec "returnlist.sort(%s%s)" % ("reverse=True" if order == "desc" else "reverse=False", ",key=%s" % sort if sort is not None else ",key=str.lower")
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/databrowse/plugins/db_webpage_viewer'...
Listing './lib/python3.5/site-packages/databrowse/support'...
Compiling './lib/python3.5/site-packages/databrowse/support/RMETA.py'...
***   File "./lib/python3.5/site-packages/databrowse/support/RMETA.py", line 235
    if debug: print "Got 2D barcode:", barcode
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/databrowse/support/handler_support.py'...
***   File "./lib/python3.5/site-packages/databrowse/support/handler_support.py", line 72
    exec "import databrowse.plugins.%s.handlers" % modulename  # Added 8/6/13 - Transition to Installed Modules
                                               ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/databrowse/support/renderer_support.py'...
***   File "./lib/python3.5/site-packages/databrowse/support/renderer_support.py", line 254
    0140000: 'ssocket',
          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/databrowse/support/specimen_support.py'...
***   File "./lib/python3.5/site-packages/databrowse/support/specimen_support.py", line 111
    print etree.tostring(groupxml, pretty_print=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/databrowse/support/web_support.py'...
***   File "./lib/python3.5/site-packages/databrowse/support/web_support.py", line 266
    exec self.confstr
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/databrowse/support/zipstream'...
Listing './lib/python3.5/site-packages/databrowse-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
